--- a/index.html
+++ b/index.html
@@ -16,4 +16,8 @@
     <h2>Home lab layout:</h2>
     <img src="Network Diagram 01.png" alt="network01" class="main network01">
 </body>
+<body>
+    <h2>Home lab layout:</h2>
+    <img src="Topology 01.png" alt="network02" class="main network02">
+</body>
 </html>
