html & css neaten

--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Clinton Fourie</title>
 <link rel="stylesheet" href="main.css">
 </head>
 <h1>This is part of my DevOps project!</h1>
-<h2>Clinton Fourie: Tel:+27617002835 Mail:clinton.fourieza@outlook.com</h2>
+<h2>My static site is running on AWS and I have implimented a pipeline with 2 developer branches.</h2>
+<h2>These branches are only commited to master by myself</h2>
+
+<h3>Clinton Fourie: Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h3>
 <img src="Clinton.png" alt="Clinton Fourie" class="Clinton">
 <body>
-    <h2>Network Diagram:</h2>
+    <h3>Network Diagram:</h3>
     <img src="Network Diagram 01.png" alt="Clinton Fourie" class="Network01">
 </body>
 <body>
-    <h2>Network Topologies:</h2>
+    <h3>Network Topologies:</h3>
     <img src="Topology.png" alt="Clinton Fourie" class="Topology">
 </body>
 </html>
