Spelling and css height

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <h1>This is part of my DevOps project!</h1>
-<h2>My static site is running on AWS and I have implimented a pipeline with 2 developer branches.</h2>
-<h2>These branches are only commited to master by myself</h2>
+<h2>My static site is running on AWS and I have implemented a pipeline with 2 developer branches.</h2>
+<h2>These branches are only commited to master by myself.</h2>
 
 <h3>Clinton Fourie: Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h3>
 <img src="Clinton.png" alt="Clinton Fourie" class="Clinton">
