--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <h1>This is part of my DevOps project!</h1>
 <h2>My static site is running on AWS and I have implemented a pipeline with 2 developer branches.</h2>
 <h2>These branches are only commited to master by myself.</h2>
-
 <h3>Clinton Fourie: Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h3>
+<h4>Hello Sean, which picture do you prefer?</h4>
+<h4>Option 1:</h4>
 <img src="Clinton.png" alt="Clinton Fourie" class="Clinton">
+<h4>Option 2:</h4>
+<img src="Clinton01.png" alt="Clinton Fourie" class="Clinton01">
 <body>
     <h3>Network Diagram:</h3>
     <img src="Network Diagram 01.png" alt="Clinton Fourie" class="Network01">
