--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <h1>This is part of my DevOps project!</h1>
 <h2>My static site is running on AWS and I have implemented a pipeline with 2 developer branches.</h2>
-<h2>These branches are only commited to master by myself.</h2>
+<h2>The branch changes are only commited to master by myself.</h2>
 <h3>Clinton Fourie: Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h3>
 <h4>Hello Sean, which picture do you prefer?</h4>
 <h4>Option 1:</h4>
