--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <title>Clinton Fourie</title>
 <link rel="stylesheet" href="main.css">
 </head>
-<h1>This is part of my DevOps project!</h1>
-    <h2>My static site is running on AWS and I have implemented a pipeline with 2 developer branches.</h2>
-    <h2>The branch changes are only commited to master by myself.</h2>
-        <h3>Clinton Fourie: Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h3>
+<h1>Clinton Fourie - Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h1>
+<h2>This is part of my DevOps project!</h2>
+    <p>My static website is pointing to my AWS s3 public bucket (DNS).
+    <br>I have setup 2x development VM's (1x Windows 10 32bit and 1x Ubuntu 20.04 64bit)
+    <br>The Windows 10 uses Git, GitKarken and it is set to commit to dev branch 01.
+    <br>The Ubuntu runs Git, Visual studio Code and it is set to commit to dev branch 02.
+    <br>I, myself run Windows 10 64bit with Git, Visual Studio Code and Githib desktop.
+    <br>I have tested the commits to the master branch from all sources but still need to test the commits to dev branches. 
+    <br>I have linked my master branch to to AWS s3 bucket by creating a pipeline.
+    <br>I have tested and all code commits exactly as I want it to with it updateing within seconds of my push.
+    </p>
 <img src="Clinton.png" alt="Clinton Fourie" class="Clinton">
         <h3>Network Diagram:</h3>
         <img src="Network Diagram 01.png" alt="Clinton Fourie" class="Network01">
@@ -17,5 +24,25 @@
 <body>
         <h3>Network Topologies:</h3>
         <img src="Topology.png" alt="Clinton Fourie" class="Topology">
+</body>
+<body>
+    <h3>DevOps Resources:</h3>
+    <h4>Gitlab and OverOps; discuss quality gates.</h4>
+    <a href="https://youtu.be/cknZfRYR8UI">Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
+</body>
+<body>
+    <h3>DevOps Blog:</h3>
+    <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
+    <p>DevOps pipelines are an investment and testing different solutions for different languages will become "DevOps Best Practise".
+        <br>There are many solutions out there to choose from, some of these don't understand the fundamentals of networking principles.
+        <br>Do you understand your OSI model, communication protocols or principles, App security, pipeline security, DNS leaks, Data leaks?
+        <br>If not, then it will be much safer for you to keep everything under one umbrella, rather than trying to build out your pipeline
+        <br>over secure or insecure connections. Just imagine someone intercepts your code during the commit phase or injects code into
+        <br>your pipeline, whos going to tell the clients that every app is a potential hidden botnet. It is one thing, thinking your code
+        <br>needs to be tried and tested, as your pipeline should also be monitored, patched and upgraded for any potential
+        <br>vulnrabilities.
+        <br>So you need your trusted and tested pipeline and you also need a "development pipeline" the one you can play around with.
+        <br>A few more lines of text and this could become an Amazon Web Services add.
+    </p>
 </body>
 </html>
