Added youtube template info

--- a/index.html
+++ b/index.html
@@ -6,19 +6,45 @@
     <title>Clinton Fourie</title>
 <link rel="stylesheet" href="main.css">
 </head>
-<h1>Clinton Fourie - Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h1>
-<h2>This is part of my DevOps project!</h2>
-    <p>My static website is pointing to my AWS s3 public bucket (DNS).
-    <br>I have setup 2x development VM's (1x Windows 10 32bit and 1x Ubuntu 20.04 64bit)
-    <br>The Windows 10 uses Git, GitKarken and it is set to commit to dev branch 01.
-    <br>The Ubuntu runs Git, Visual studio Code and it is set to commit to dev branch 02.
-    <br>I, myself run Windows 10 64bit with Git, Visual Studio Code and Githib desktop.
-    <br>I have tested the commits to the master branch from all sources but still need to test the commits to dev branches. 
-    <br>I have linked my master branch to to AWS s3 bucket by creating a pipeline.
-    <br>I have tested and all code commits exactly as I want it to with it updateing within seconds of my push.
-    </p>
+<br />
+<div class="main" id="home">
+<body background="images/bgimg01.png" link="#000" alink="#017bf5" vlink="#000">
+        <br />
+        <h3 align="left">
+            <font face="sans-serif" size="6" color="#2c3e50">LOGO</font>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <font face="sans" size="4">
+                <a href="#home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#BLOG">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#CONTACT US">CONTACT US</a>
+            </font>
+        </h3>
+    </div>
+</body>
+<br />
+<body>
+    <h1>Clinton Fourie - Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h1>
+        <br />    
+            <h2>This is part of my DevOps project and this site is still under construction!</h2>
+                <p>My static website is pointing to my AWS s3 public bucket (DNS).
+                <br>I have setup 2x development VM's (1x Windows 10 32bit and 1x Ubuntu 20.04 64bit)
+                <br>The Windows 10 uses Git, GitKarken and it is set to commit to dev branch 01.
+                <br>The Ubuntu runs Git, Visual studio Code and it is set to commit to dev branch 02.
+                <br>I, myself run Windows 10 64bit with Git, Visual Studio Code and Githib desktop.
+                <br>I have tested the commits to the master branch from all sources but still need to test the commits to dev branches. 
+                <br>I have linked my master branch to to AWS s3 bucket by creating a pipeline.
+                <br>I have tested and all code commits exactly as I want it to with it updateing within seconds of my push.
+                </p>
 <img src="Clinton.png" alt="Clinton Fourie" class="Clinton">
-        <h3>Network Diagram:</h3>
+</body>
+<br />
+<body>
+    <div class="main" id="PORTFOLIO">       
+<h3>Network Diagram:</h3>
         <img src="Network Diagram 01.png" alt="Clinton Fourie" class="Network01">
 </body>
 <body>
@@ -31,18 +57,53 @@
     <a href="https://youtu.be/cknZfRYR8UI">Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
 </body>
 <body>
-    <h3>DevOps Blog:</h3>
-    <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
-    <p>DevOps pipelines are an investment and testing different solutions for different languages will become "DevOps Best Practise".
-        <br>There are many solutions out there to choose from, some of these don't understand the fundamentals of networking principles.
-        <br>Do you understand your OSI model, communication protocols or principles, App security, pipeline security, DNS leaks, Data leaks?
-        <br>If not, then it will be much safer for you to keep everything under one umbrella, rather than trying to build out your pipeline
-        <br>over secure or insecure connections. Just imagine someone intercepts your code during the commit phase or injects code into
-        <br>your pipeline, whos going to tell the clients that every app is a potential hidden botnet. It is one thing, thinking your code
-        <br>needs to be tried and tested, as your pipeline should also be monitored, patched and upgraded for any potential
-        <br>vulnrabilities.
-        <br>So you need your trusted and tested pipeline and you also need a "development pipeline" the one you can play around with.
-        <br>A few more lines of text and this could become an Amazon Web Services add.
-    </p>
+    <div class="main" id="BLOG">
+        <h3>DevOps Blog:</h3>
+            <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
+                <p>DevOps pipelines are an investment and testing different solutions for different languages will become "DevOps Best Practise".
+                <br>There are many solutions out there to choose from, some of these don't understand the fundamentals of networking principles.
+                <br>Do you understand your OSI model, communication protocols or principles, App security, pipeline security, DNS leaks, Data leaks?
+                <br>If not, then it will be much safer for you to keep everything under one umbrella, rather than trying to build out your pipeline
+                <br>over secure or insecure connections. Just imagine someone intercepts your code during the commit phase or injects code into
+                <br>your pipeline, whos going to tell the clients that every app is a potential hidden botnet. It is one thing, thinking your code
+                <br>needs to be tried and tested, as your pipeline should also be monitored, patched and upgraded for any potential
+                <br>vulnrabilities.
+                <br>So you need your trusted and tested pipeline and you also need a "development pipeline" the one you can play around with.
+                <br>A few more lines of text and this could become an Amazon Web Services add.
+                </p>
+    </div>            
 </body>
+<br />
+<div class="main" id="CONTACT US">
+    <hr color="#000" width="20%">
+        <p align="center"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
+    <hr color="#000" width="20%">
+    <br><br>
+    <form name="f1" id="contact-form">
+        <table align="center" cellpadding="5" cellspacing="12" border="1" height="200">
+            <tr>
+                <td>
+                    <input type="text" name="first_name" placeholder="First Name" required="required" />
+                </td>
+                <td>
+                    <input type="text" name="Last_name" placeholder="Last Name" required="required" />
+                </td>
+            </tr>
+            <tr>
+                <td><input type="email" name="email" placeholder="Email" required="required" /></td>
+                <td><input type="text" name="subject" placeholder="Subject" required="required" /></td>
+            </tr>
+            <tr>
+                <th colspan="2">
+                    <textarea placeholder="Enter Message" required=""></textarea>
+                </th>
+            </tr>
+            <tr>
+                <th colspan="2">
+                    <input type="submit" name="contact-submit" value="SEND">
+                </th>
+            </tr>
+        </table>
+    </form>
+</div>
 </html>
