--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <br>I have tested the commits to the master branch from all sources but still need to test the commits to dev branches. 
                 <br>I have linked my master branch to to AWS s3 bucket by creating a pipeline.
                 <br>I have tested and all code commits exactly as I want it to with it updateing within seconds of my push.
+                <br>I need to check the commit time on Github vs the commit time on AWS to see what the update time difference is! 
                 </p>
 <img src="Clinton.png" alt="Clinton Fourie" class="Clinton">
 </body>
