--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>Clinton Fourie</title>
 <link rel="stylesheet" href="main.css">
 </head>
 <br />
 <div class="main" id="home">
-<body background="images/bgimg01.png" link="#000" alink="#017bf5" vlink="#000">
-        <br />
+<body>
+    <br />
         <h3 align="left">
-            <font face="sans-serif" size="6" color="#2c3e50">LOGO</font>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="Clinton.png" alt="Clinton Fourie" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
                 <a href="#home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -27,7 +23,7 @@
 </body>
 <br />
 <body>
-    <h1>Clinton Fourie - Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h1>
+    <h2>Clinton Fourie Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h2>
         <br />    
             <h2>This is part of my DevOps project and this site is still under construction!</h2>
                 <p>My static website is pointing to my AWS s3 public bucket (DNS).
@@ -40,16 +36,15 @@
                 <br>I have tested and all code commits exactly as I want it to with it updateing within seconds of my push.
                 <br>I need to check the commit time on Github vs the commit time on AWS to see what the update time difference is! 
                 </p>
-<img src="Clinton.png" alt="Clinton Fourie" class="Clinton">
 </body>
 <br />
 <body>
     <div class="main" id="PORTFOLIO">       
-<h3>Network Diagram:</h3>
+<h3>Network Diagram (Home Lab):</h3>
         <img src="Network Diagram 01.png" alt="Clinton Fourie" class="Network01">
 </body>
 <body>
-        <h3>Network Topologies:</h3>
+        <h3>Network Topologies (Core infrastructure):</h3>
         <img src="Topology.png" alt="Clinton Fourie" class="Topology">
 </body>
 <body>
@@ -76,12 +71,12 @@
 </body>
 <br />
 <div class="main" id="CONTACT US">
-    <hr color="#000" width="20%">
-        <p align="center"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
-    <hr color="#000" width="20%">
+    <hr align="left" color="#000" width="20%">
+        <p align="left"><font face="sans-serif" color="#017bf5" size="5.5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspCONTACT US</font></p>
+    <hr align="left" color="#000" width="20%">
     <br><br>
     <form name="f1" id="contact-form">
-        <table align="center" cellpadding="5" cellspacing="12" border="1" height="200">
+        <table align="left" cellpadding="5" cellspacing="12" border="1" height="200">
             <tr>
                 <td>
                     <input type="text" name="first_name" placeholder="First Name" required="required" />
