--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 </body>
 <br />
 <div class="main" id="CONTACT US">
-    <hr align="left" color="#000" width="20%">
-        <p align="left"><font face="sans-serif" color="#017bf5" size="5.5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspCONTACT US</font></p>
-    <hr align="left" color="#000" width="20%">
+    <hr align="centre" color="#000" width="20%">
+        <p align="centre"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
+    <hr align="centre" color="#000" width="20%">
     <br><br>
     <form name="f1" id="contact-form">
         <table align="left" cellpadding="5" cellspacing="12" border="1" height="200">
