--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
     <a href="https://youtu.be/cknZfRYR8UI">Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
 </body>
 <body>
+    <h3>DevOps (AWS Pipeline):</h3>
+    <img src="/images/AWSpipelineconfig.PNG" alt="Clinton Fourie" class="AWSpipelineconfig">
+</body>
+<body>
+    <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
+    <img src="/images/AWSactivepipeline.PNG" alt="Clinton Fourie" class="AWSactivepipeline">
+</body>
+<body>
+    <h3>DevOps (GitHub Active AWS Code Commits):</h3>
+    <img src="/images/CommitsClinton.PNG" alt="Clinton Fourie" class="CommitsClinton">
+</body>
+<body>
     <div class="main" id="BLOG">
         <h3>DevOps Blog:</h3>
             <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
@@ -76,7 +88,7 @@
     <hr align="centre" color="#000" width="20%">
     <br><br>
     <form name="f1" id="contact-form">
-        <table align="left" cellpadding="5" cellspacing="12" border="1" height="200">
+        <table align="centre" cellpadding="5" cellspacing="12" border="1" height="200">
             <tr>
                 <td>
                     <input type="text" name="first_name" placeholder="First Name" required="required" />
