--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=2.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinton Fourie</title>
 <link rel="stylesheet" href="main.css">
 </head>
@@ -86,9 +86,9 @@
     <hr align="centre" color="#000" width="20%">
         <p align="centre"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
     <hr align="centre" color="#000" width="20%">
-    <br><br>
+    <br />
     <form name="f1" id="contact-form">
-        <table align="centre" cellpadding="5" cellspacing="12" border="1" height="200">
+        <table align="left" cellpadding="5" cellspacing="12" border="1" height="200">
             <tr>
                 <td>
                     <input type="text" name="first_name" placeholder="First Name" required="required" />
