Revamp for mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <br />
         <h3 align="left">
-            <img src="Clinton.png" alt="Clinton Fourie" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="/pictures/Clinton.png" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
                 <a href="#home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -41,11 +41,11 @@
 <body>
     <div class="main" id="PORTFOLIO">       
 <h3>Network Diagram (Home Lab):</h3>
-        <img src="Network Diagram 01.png" alt="Clinton Fourie" class="Network01">
+        <img src="/images/Network Diagram 01.png" alt="Clinton Fourie 02" class="Network01">
 </body>
 <body>
         <h3>Network Topologies (Core infrastructure):</h3>
-        <img src="Topology.png" alt="Clinton Fourie" class="Topology">
+        <img src="/images/Topology.png" alt="Clinton Fourie 03" class="Topology">
 </body>
 <body>
     <h3>DevOps Resources:</h3>
@@ -54,15 +54,15 @@
 </body>
 <body>
     <h3>DevOps (AWS Pipeline):</h3>
-    <img src="/images/AWSpipelineconfig.PNG" alt="Clinton Fourie" class="AWSpipelineconfig">
+    <img src="/images/AWSpipelineconfig.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
 </body>
 <body>
     <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
-    <img src="/images/AWSactivepipeline.PNG" alt="Clinton Fourie" class="AWSactivepipeline">
+    <img src="/images/AWSactivepipeline.PNG" alt="Clinton Fourie 05" class="AWSactivepipeline">
 </body>
 <body>
     <h3>DevOps (GitHub Active AWS Code Commits):</h3>
-    <img src="/images/CommitsClinton.PNG" alt="Clinton Fourie" class="CommitsClinton">
+    <img src="/images/CommitsClinton.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
 </body>
 <body>
     <div class="main" id="BLOG">
