Add resource pdf

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 <body>
     <h3>DevOps Resources:</h3>
     <h4>Gitlab and OverOps; discuss quality gates.</h4>
-    <a href="https://youtu.be/cknZfRYR8UI">Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
+    <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
+    <a href="/Documents/devopsmaturity.pdf">2) PDF: DevOps muturity</a>
 </body>
 <body>
     <h3>DevOps (AWS Pipeline):</h3>
