--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     </div>            
 </body>
 <br />
-<div class="main" id="CONTACT US">
-    <hr align="centre" color="#000" width="20%">
-        <p align="centre"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
-    <hr align="centre" color="#000" width="20%">
+    <div class="contact">
+        <hr color="#000" width="20%">
+            <p align="center"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
+        <hr color="#000" width="20%">
     <br />
     <form name="f1" id="contact-form">
         <table align="left" cellpadding="5" cellspacing="12" border="1" height="200">
