contact form repairs

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <hr color="#000" width="20%">
     <br />
     <form name="f1" id="contact-form">
-        <table align="left" cellpadding="5" cellspacing="12" border="1" height="200">
+        <table align="center" cellpadding="5" cellspacing="12" border="1" height="200">
             <tr>
                 <td>
                     <input type="text" name="first_name" placeholder="First Name" required="required" />
