--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <br />
 <div class="main" id="home">
-<body>
-    <br />
+<br />
+    <body>
         <h3 align="left">
             <img src="/pictures/Clinton.png" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
@@ -43,16 +43,21 @@
 <h3>Network Diagram (Home Lab):</h3>
         <img src="/images/Network Diagram 01.png" alt="Clinton Fourie 02" class="Network01">
 </body>
+<br />
 <body>
         <h3>Network Topologies (Core infrastructure):</h3>
         <img src="/images/Topology.png" alt="Clinton Fourie 03" class="Topology">
 </body>
+<br />
 <body>
     <h3>DevOps Resources:</h3>
     <h4>Gitlab and OverOps; discuss quality gates.</h4>
-    <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
-    <a href="/Documents/devopsmaturity.pdf">2) PDF: DevOps muturity</a>
+    <p>
+        <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
+        <br><a href="/Documents/devopsmaturity.pdf">2) PDF: DevOps muturity</a>
+    </p>
 </body>
+<br />
 <body>
     <h3>DevOps (AWS Pipeline):</h3>
     <img src="/images/AWSpipelineconfig.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
@@ -61,10 +66,12 @@
     <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
     <img src="/images/AWSactivepipeline.PNG" alt="Clinton Fourie 05" class="AWSactivepipeline">
 </body>
+<br />
 <body>
     <h3>DevOps (GitHub Active AWS Code Commits):</h3>
     <img src="/images/CommitsClinton.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
 </body>
+<br />
 <body>
     <div class="main" id="BLOG">
         <h3>DevOps Blog:</h3>
