--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <title>Clinton Fourie</title>
 <link rel="stylesheet" href="main.css">
 </head>
-<br />
 <div class="main" id="home">
 <br />
     <body>
         <h3 align="left">
             <img src="/pictures/Clinton.png" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
-                <a href="#home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#Home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#BLOG">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#CONTACT US">CONTACT US</a>
@@ -21,6 +20,7 @@
         </h3>
     </div>
 </body>
+<br />
 <br />
 <body>
     <h2>Clinton Fourie Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h2>
@@ -38,16 +38,19 @@
                 </p>
 </body>
 <br />
+<br />
 <body>
     <div class="main" id="PORTFOLIO">       
 <h3>Network Diagram (Home Lab):</h3>
         <img src="/images/Network Diagram 01.png" alt="Clinton Fourie 02" class="Network01">
 </body>
 <br />
+<br />
 <body>
         <h3>Network Topologies (Core infrastructure):</h3>
         <img src="/images/Topology.png" alt="Clinton Fourie 03" class="Topology">
 </body>
+<br />
 <br />
 <body>
     <h3>DevOps Resources:</h3>
@@ -58,19 +61,24 @@
     </p>
 </body>
 <br />
+<br />
 <body>
     <h3>DevOps (AWS Pipeline):</h3>
     <img src="/images/AWSpipelineconfig.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
 </body>
+<br />
+<br />
 <body>
     <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
     <img src="/images/AWSactivepipeline.PNG" alt="Clinton Fourie 05" class="AWSactivepipeline">
 </body>
 <br />
+<br />
 <body>
     <h3>DevOps (GitHub Active AWS Code Commits):</h3>
     <img src="/images/CommitsClinton.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
 </body>
+<br />
 <br />
 <body>
     <div class="main" id="BLOG">
@@ -89,6 +97,7 @@
                 </p>
     </div>            
 </body>
+<br />
 <br />
     <div class="contact">
         <hr color="#000" width="20%">
