--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 <br />
     <div class="contact">
         <hr color="#000" width="20%">
-            <p align="center"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
+            <p align="left"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
         <hr color="#000" width="20%">
     <br />
     <form name="f1" id="contact-form">
-        <table align="center" cellpadding="5" cellspacing="12" border="1" height="200">
+        <table align="left" cellpadding="5" cellspacing="12" border="1" height="200">
             <tr>
                 <td>
                     <input type="text" name="first_name" placeholder="First Name" required="required" />
