Contact form again

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 <br />
 <br />
     <div class="contact">
-        <hr color="#000" width="20%">
-            <p align="left"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></p>
-        <hr color="#000" width="20%">
+        <hr align="left" color="#000" width="20%">
+            <p align="left"><font face="sans-serif" color="#017bf5" size="5.5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspCONTACT US</font></p>
+        <hr align="left" color="#000" width="20%">
     <br />
     <form name="f1" id="contact-form">
         <table align="left" cellpadding="5" cellspacing="12" border="1" height="200">
