--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <br>I have setup 2x development VM's (1x Windows 10 32bit and 1x Ubuntu 20.04 64bit)
                 <br>The Windows 10 uses Git, GitKarken and it is set to commit to dev branch 01.
                 <br>The Ubuntu runs Git, Visual studio Code and it is set to commit to dev branch 02.
-                <br>I, myself run Windows 10 64bit with Git, Visual Studio Code and Githib desktop.
+                <br>I, myself run Windows 10 64bit with Git, Visual Studio Code and Github desktop.
                 <br>I have tested the commits to the master branch from all sources but still need to test the commits to dev branches. 
                 <br>I have linked my master branch to to AWS s3 bucket by creating a pipeline.
                 <br>I have tested and all code commits exactly as I want it to with it updateing within seconds of my push.
