--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h4>Gitlab and OverOps; discuss quality gates.</h4>
     <p>
         <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
-        <br><a href="/Documents/devopsmaturity.pdf">2) PDF: DevOps muturity</a>
+        <br><a href="/Documents/devopsmaturity.pdf">2) PDF: OverOps - Tali Soroker: Delivering Reliable Software in the Enterprise</a>
     </p>
 </body>
 <br />
