--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br />
     <body>
         <h3 align="left">
-            <img src="/pictures/Clinton.png" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="/images/Clinton" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
                 <a href="#Home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -105,7 +105,7 @@
         <hr align="left" color="#000" width="20%">
     <br />
     <form name="Clinton Fourie" id="contact-form" action="https://formspree.io/clinton.fourieza@outlook.com">
-        method="POST">
+        <method="POST">
         <input type=”text” name=”name”>
         <input type=”email” name=”_replyto”>
         <input type=”submit” value=”Send”>
