--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br />
     <body>
         <h3 align="left">
-            <img src="/images/Clinton" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="/images/Clinton2" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
                 <a href="#Home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -42,13 +42,13 @@
 <body>
     <div class="main" id="PORTFOLIO">       
 <h3>Network Diagram (Home Lab):</h3>
-        <img src="/images/Network Diagram 01.png" alt="Clinton Fourie 02" class="Network01">
+        <img src="/images/Network Diagram 01_2.png" alt="Clinton Fourie 02" class="Network01">
 </body>
 <br />
 <br />
 <body>
         <h3>Network Topologies (Core infrastructure):</h3>
-        <img src="/images/Topology.png" alt="Clinton Fourie 03" class="Topology">
+        <img src="/images/Topology2.png" alt="Clinton Fourie 03" class="Topology">
 </body>
 <br />
 <br />
@@ -64,19 +64,19 @@
 <br />
 <body>
     <h3>DevOps (AWS Pipeline):</h3>
-    <img src="/images/AWSpipelineconfig.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
+    <img src="/images/AWSpipelineconfig2.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
 </body>
 <br />
 <br />
 <body>
     <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
-    <img src="/images/AWSactivepipeline.PNG" alt="Clinton Fourie 05" class="AWSactivepipeline">
+    <img src="/images/AWSactivepipeline2.PNG" alt="Clinton Fourie 05" class="AWSactivepipeline">
 </body>
 <br />
 <br />
 <body>
     <h3>DevOps (GitHub Active AWS Code Commits):</h3>
-    <img src="/images/CommitsClinton.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
+    <img src="/images/CommitsClinton2.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
 </body>
 <br />
 <br />
