--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
             <p align="left"><font face="sans-serif" color="#017bf5" size="5.5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspCONTACT US</font></p>
         <hr align="left" color="#000" width="20%">
     <br />
-    <form name="Clinton Fourie" id="contact-form" action="https://formspree.io/clinton.fourieza@outlook.com">
-        <method="POST">
+    <form action="https://formspree.io/maypvlva" method="POST">
         <input type=”text” name=”name”>
         <input type=”email” name=”_replyto”>
         <input type=”submit” value=”Send”>
