--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
         <hr align="left" color="#000" width="20%">
     <br />
     <form action="https://formspree.io/maypvlva" method="POST">
-        <input type=”text” name=”name”>
-        <input type=”email” name=”_replyto”>
-        <input type=”submit” value=”Send”>
+        <input type="email" name="_replyto" placeholder="your email"> 
+        <input type="textarea" name="name" placeholder="your message">
+        <input type="submit" value="Send"> 
     </form>
 </div>
 </html>
