--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clinton Fourie</title>
+<title>Clinton Fourie</title>    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <link rel="stylesheet" href="main.css">
 </head>
 <div class="main" id="home">
 <br />
     <body>
+    <div class="wrapper">
         <h3 align="left">
             <img src="/images/Clinton2" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
@@ -23,6 +24,7 @@
 <br />
 <br />
 <body>
+<div class="wrapper">
     <h2>Clinton Fourie Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h2>
         <br />    
             <h2>This is part of my DevOps project and this site is still under construction!</h2>
@@ -36,6 +38,7 @@
                 <br>I have tested and all code commits exactly as I want it to with it updateing within seconds of my push.
                 <br>I need to check the commit time on Github vs the commit time on AWS to see what the update time difference is! 
                 </p>
+</div>
 </body>
 <br />
 <br />
