--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
     <div class="wrapper">
         <h3 align="left">
-            <img src="/images/Clinton2" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
                 <a href="#Home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
