--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <link rel="stylesheet" href="main.css">
 </head>
-<div class="main" id="home">
 <br />
     <body>
-    <div class="wrapper">
+    <div class="wrapper" id="home">
         <h3 align="left">
             <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
             <font face="sans" size="4">
@@ -24,7 +23,7 @@
 <br />
 <br />
 <body>
-<div class="wrapper">
+<div class="wrapper" id="home article">
     <h2>Clinton Fourie Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h2>
         <br />    
             <h2>This is part of my DevOps project and this site is still under construction!</h2>
@@ -43,48 +42,37 @@
 <br />
 <br />
 <body>
-    <div class="main" id="PORTFOLIO">       
+    <div class="wrapper" id="PORTFOLIO">       
 <h3>Network Diagram (Home Lab):</h3>
         <img src="/images/Network Diagram 01_2.png" alt="Clinton Fourie 02" class="Network01">
-</body>
 <br />
-<br />
-<body>
         <h3>Network Topologies (Core infrastructure):</h3>
         <img src="/images/Topology2.png" alt="Clinton Fourie 03" class="Topology">
+    </div>
 </body>
 <br />
-<br />
 <body>
-    <h3>DevOps Resources:</h3>
-    <h4>Gitlab and OverOps; discuss quality gates.</h4>
+    <div class="wrapper" id="Resources">       
+        <h3>DevOps Resources:</h3>
+        <h4>Gitlab and OverOps; discuss quality gates.</h4>
     <p>
         <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
         <br><a href="/Documents/devopsmaturity.pdf">2) PDF: OverOps - Tali Soroker: Delivering Reliable Software in the Enterprise</a>
     </p>
-</body>
-<br />
-<br />
-<body>
+<br />    
     <h3>DevOps (AWS Pipeline):</h3>
     <img src="/images/AWSpipelineconfig2.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
-</body>
 <br />
-<br />
-<body>
     <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
     <img src="/images/AWSactivepipeline2.PNG" alt="Clinton Fourie 05" class="AWSactivepipeline">
-</body>
 <br />
-<br />
-<body>
     <h3>DevOps (GitHub Active AWS Code Commits):</h3>
     <img src="/images/CommitsClinton2.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
+    </div>
 </body>
 <br />
-<br />
 <body>
-    <div class="main" id="BLOG">
+    <div class="wrapper" id="BLOG">
         <h3>DevOps Blog:</h3>
             <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
                 <p>DevOps pipelines are an investment and testing different solutions for different languages will become "DevOps Best Practise".
@@ -101,8 +89,7 @@
     </div>            
 </body>
 <br />
-<br />
-    <div class="contact">
+    <div class="wrapper" id="Contact">
         <hr align="left" color="#000" width="20%">
             <p align="left"><font face="sans-serif" color="#017bf5" size="5.5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspCONTACT US</font></p>
         <hr align="left" color="#000" width="20%">
