--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <body>
     <div class="wrapper" id="home">
         <h3 align="left">
-            <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
             <font face="sans" size="4">
-                <a href="#Home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="#BLOG">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#Home">HOME</a>
+                <a href="#PORTFOLIO">PORTFOLIO</a>
+                <a href="#Resources">DevOps Resources</a>
+                <a href="#BLOG">BLOG</a>
                 <a href="#CONTACT US">CONTACT US</a>
             </font>
         </h3>
