--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <font face="sans" size="4">
                 <a href="#Home">HOME</a>
                 <a href="#PORTFOLIO">PORTFOLIO</a>
-                <a href="#Resources">DevOps Resources</a>
+                <a href="#Resources">RESOURCES</a>
                 <a href="#BLOG">BLOG</a>
                 <a href="#CONTACT US">CONTACT US</a>
             </font>
