--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-<title>Clinton Fourie</title>    
+<title>Clinton Fourie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <link rel="stylesheet" href="main.css">
 </head>
@@ -12,10 +12,10 @@
         <h3 align="left">
             <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
             <font face="sans" size="4">
-                <a href="#Home">HOME</a>
-                <a href="#PORTFOLIO">PORTFOLIO</a>
-                <a href="#Resources">RESOURCES</a>
-                <a href="#BLOG">BLOG</a>
+                <br><a href="#Home">HOME</a>
+                <br><a href="#PORTFOLIO">PORTFOLIO</a>
+                <br><a href="#Resources">RESOURCES</a>
+                <br><a href="#BLOG">BLOG</a>
                 <a href="#CONTACT US">CONTACT US</a>
             </font>
         </h3>
@@ -60,13 +60,10 @@
         <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
         <br><a href="/Documents/devopsmaturity.pdf">2) PDF: OverOps - Tali Soroker: Delivering Reliable Software in the Enterprise</a>
     </p>
-<br />    
     <h3>DevOps (AWS Pipeline):</h3>
     <img src="/images/AWSpipelineconfig2.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
-<br />
     <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
     <img src="/images/AWSactivepipeline2.PNG" alt="Clinton Fourie 05" class="AWSactivepipeline">
-<br />
     <h3>DevOps (GitHub Active AWS Code Commits):</h3>
     <img src="/images/CommitsClinton2.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
     </div>
