--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <br><a href="#PORTFOLIO">PORTFOLIO</a>
                 <br><a href="#Resources">RESOURCES</a>
                 <br><a href="#BLOG">BLOG</a>
-                <a href="#CONTACT US">CONTACT US</a>
+                <br><a href="#CONTACT US">CONTACT US</a>
             </font>
         </h3>
     </div>
