Contact form changes

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
             <font face="sans" size="4">
                 <br><a href="#Home">HOME</a>
                 <br><a href="#PORTFOLIO">PORTFOLIO</a>
-                <br><a href="#Resources">RESOURCES</a>
+                <br><a href="#RESOURCES">RESOURCES</a>
                 <br><a href="#BLOG">BLOG</a>
                 <br><a href="#CONTACT US">CONTACT US</a>
             </font>
         </h3>
     </div>
 </body>
-<br />
-<br />
 <body>
 <div class="wrapper" id="home article">
     <h2>Clinton Fourie Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h2>
@@ -41,10 +39,10 @@
 </div>
 </body>
 <br />
-<br />
 <body>
-    <div class="wrapper" id="PORTFOLIO">       
-<h3>Network Diagram (Home Lab):</h3>
+    <div class="wrapper" id="PORTFOLIO">
+<h2>Portfolio:</h2>
+    <h3>Network Diagram (Home Lab):</h3>
         <img src="/images/Network Diagram 01_2.png" alt="Clinton Fourie 02" class="Network01">
 <br />
         <h3>Network Topologies (Core infrastructure):</h3>
@@ -53,8 +51,8 @@
 </body>
 <br />
 <body>
-    <div class="wrapper" id="Resources">       
-        <h3>DevOps Resources:</h3>
+    <div class="wrapper" id="RESOURCES">
+    <h2>Resources:</h2>     
         <h4>Gitlab and OverOps; discuss quality gates.</h4>
     <p>
         <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
@@ -71,7 +69,7 @@
 <br />
 <body>
     <div class="wrapper" id="BLOG">
-        <h3>DevOps Blog:</h3>
+    <h2>Blog:</h2>
             <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
                 <p>DevOps pipelines are an investment and testing different solutions for different languages will become "DevOps Best Practise".
                 <br>There are many solutions out there to choose from, some of these don't understand the fundamentals of networking principles.
@@ -88,9 +86,9 @@
 </body>
 <br />
     <div class="wrapper" id="Contact">
-        <hr align="left" color="#000" width="20%">
-            <p align="left"><font face="sans-serif" color="#017bf5" size="5.5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspCONTACT US</font></p>
-        <hr align="left" color="#000" width="20%">
+        <hr align="centre" color="#000" width="20%">
+            <h2 align="centre"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></h2>
+        <hr align="centre" color="#000" width="20%">
     
         <form action="https://formspree.io/maypvlva" method="POST">
     <br />
