--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 </body>
 <body>
 <div class="wrapper" id="home article">
-    <h2>Clinton Fourie Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h2>
-        <br />    
-            <h2>This is part of my DevOps project and this site is still under construction!</h2>
+    <h2>Clinton Fourie Tel: +27617002835 e-mail: clinton.fourieza@outlook.com</h2>   
+            <h3>This is part of my DevOps project and this site is still under construction!</h3>
                 <p>My static website is pointing to my AWS s3 public bucket (DNS).
                 <br>I have setup 2x development VM's (1x Windows 10 32bit and 1x Ubuntu 20.04 64bit)
                 <br>The Windows 10 uses Git, GitKarken and it is set to commit to dev branch 01.
@@ -38,10 +37,9 @@
                 </p>
 </div>
 </body>
-<br />
 <body>
     <div class="wrapper" id="PORTFOLIO">
-<h2>Portfolio:</h2>
+        <h2 align="centre"><font face="sans-serif" color="#017bf5" size="5.5">PORTFOLIO</font></h2> 
     <h3>Network Diagram (Home Lab):</h3>
         <img src="/images/Network Diagram 01_2.png" alt="Clinton Fourie 02" class="Network01">
 <br />
@@ -52,7 +50,7 @@
 <br />
 <body>
     <div class="wrapper" id="RESOURCES">
-    <h2>Resources:</h2>     
+        <h2 align="centre"><font face="sans-serif" color="#017bf5" size="5.5">RESOURCES</font></h2>      
         <h4>Gitlab and OverOps; discuss quality gates.</h4>
     <p>
         <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
@@ -69,7 +67,7 @@
 <br />
 <body>
     <div class="wrapper" id="BLOG">
-    <h2>Blog:</h2>
+        <h2 align="centre"><font face="sans-serif" color="#017bf5" size="5.5">BLOG</font></h2> 
             <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
                 <p>DevOps pipelines are an investment and testing different solutions for different languages will become "DevOps Best Practise".
                 <br>There are many solutions out there to choose from, some of these don't understand the fundamentals of networking principles.
@@ -85,12 +83,9 @@
     </div>            
 </body>
 <br />
-    <div class="wrapper" id="Contact">
-        <hr align="centre" color="#000" width="20%">
-            <h2 align="centre"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></h2>
-        <hr align="centre" color="#000" width="20%">
-    
-        <form action="https://formspree.io/maypvlva" method="POST">
+    <div class="wrapper" id="Contact">        
+        <h2 align="centre"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></h2> 
+            <form action="https://formspree.io/maypvlva" method="POST">
     <br />
        
             <label>
