--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper" id="home">
         <h3 align="left">
             <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
-            <font face="sans" size="4">
+            <font face="sans" color="#017bf5" size="4">
                 <br><a href="#Home">HOME</a>
                 <br><a href="#PORTFOLIO">PORTFOLIO</a>
                 <br><a href="#RESOURCES">RESOURCES</a>
