--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <br><a href="#PORTFOLIO">PORTFOLIO</a>
                 <br><a href="#RESOURCES">RESOURCES</a>
                 <br><a href="#BLOG">BLOG</a>
-                <br><a href="#CONTACT US">CONTACT US</a>
+                <br><a href="#CONTACT US">CONTACT ME</a>
             </font>
         </h3>
     </div>
@@ -84,7 +84,7 @@
 </body>
 <br />
     <div class="wrapper" id="Contact">        
-        <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT US</font></h2> 
+        <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT ME</font></h2> 
             <form action="https://formspree.io/maypvlva" method="POST">
     <br />
        
