--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<div class="wrapper">
     <meta charset="utf-8">
 <title>Clinton Fourie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <link rel="stylesheet" href="main.css">
+</div>
 </head>
-<br />
     <body>
-    <div class="wrapper" id="home">
+    <div class="wrapper" align="center" id="home">
         <h3 align="left">
             <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
             <font face="sans-serif" color="#017bf5" size="4">
