body align center

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="main.css">
 </div>
 </head>
-    <body>
-    <div class="wrapper" align="center" id="home">
+    <body align="center">
+    <div class="wrapper" id="home">
         <h3 align="left">
             <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
             <font face="sans-serif" color="#017bf5" size="4">
