--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="main.css">
 </div>
 </head>
-    <body align="center">
+    <body>
     <div class="wrapper" id="home">
         <h3 align="left">
             <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
@@ -68,7 +68,7 @@
 <br />
 <body>
     <div class="wrapper" id="BLOG">
-        <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">BLOG</font></h2> 
+        <h2><font face="sans-serif" color="#017bf5" size="5.5">BLOG</font></h2> 
             <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
                 <p>DevOps pipelines are an investment and testing different solutions for different languages will become "DevOps Best Practise".
                 <br>There are many solutions out there to choose from, some of these don't understand the fundamentals of networking principles.
