Position on screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <body>
     <div class="wrapper" id="home">
-        <h3 align="left">
+        <h3>
             <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
             <font face="sans-serif" color="#017bf5" size="4">
                 <br><a href="#Home">HOME</a>
@@ -23,7 +23,7 @@
     </div>
 </body>
 <body>
-<div class="wrapper" id="home article">
+<div class="wrapper" align="left" id="home article">
     <h2>Clinton Fourie Tel: +27617002835 Mail: clinton.fourieza@outlook.com</h2>   
             <h3>This is part of my DevOps project and this site is still under construction!</h3>
                 <p>My static website is pointing to my AWS s3 public bucket (DNS).
@@ -67,9 +67,10 @@
 </body>
 <br />
 <body>
-    <div class="wrapper" id="BLOG">
+    <div class="wrapper" align="center" id="BLOG">
         <h2><font face="sans-serif" color="#017bf5" size="5.5">BLOG</font></h2> 
             <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
+                <div class="wrapper" align="left">
                 <p>DevOps pipelines are an investment and testing different solutions for different languages will become "DevOps Best Practise".
                 <br>There are many solutions out there to choose from, some of these don't understand the fundamentals of networking principles.
                 <br>Do you understand your OSI model, communication protocols or principles, App security, pipeline security, DNS leaks, Data leaks?
@@ -81,6 +82,7 @@
                 <br>So you need your trusted and tested pipeline and you also need a "development pipeline" the one you can play around with.
                 <br>A few more lines of text and this could become an Amazon Web Services add.
                 </p>
+                </div>
     </div>            
 </body>
 <br />
