--- a/index.html
+++ b/index.html
@@ -41,28 +41,32 @@
 <body>
     <div class="wrapper" id="PORTFOLIO">
         <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">PORTFOLIO</font></h2> 
-    <h3>Network Diagram (Home Lab):</h3>
+    <div class="wrapper" align="center">
+        <h3>Network Diagram (Home Lab):</h3>
         <img src="/images/Network Diagram 01_2.png" alt="Clinton Fourie 02" class="Network01">
 <br />
         <h3>Network Topologies (Core infrastructure):</h3>
         <img src="/images/Topology2.png" alt="Clinton Fourie 03" class="Topology">
+
     </div>
 </body>
 <br />
 <body>
-    <div class="wrapper" id="RESOURCES">
-        <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">RESOURCES</font></h2>      
+    <div class="wrapper" align="center" id="RESOURCES">
+        <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">RESOURCES</font></h2>         
         <h4>Gitlab and OverOps; discuss quality gates.</h4>
-    <p>
+    <div class="wrapper" align="left" id="RESOURCES
+        <p>
         <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
         <br><a href="/Documents/devopsmaturity.pdf">2) PDF: OverOps - Tali Soroker: Delivering Reliable Software in the Enterprise</a>
     </p>
-    <h3>DevOps (AWS Pipeline):</h3>
+        <h3>DevOps (AWS Pipeline):</h3>
     <img src="/images/AWSpipelineconfig2.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
     <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
     <img src="/images/AWSactivepipeline2.PNG" alt="Clinton Fourie 05" class="AWSactivepipeline">
     <h3>DevOps (GitHub Active AWS Code Commits):</h3>
     <img src="/images/CommitsClinton2.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
+    </div>
     </div>
 </body>
 <br />
