--- a/index_error.html
+++ b/index_error.html
@@ -8,20 +8,19 @@
 <link rel="stylesheet" href="main.css">
 </div>
 </head>
-    <body class="navbar">
-        <div class="wrapper" id="home">
-            <font face="sans-serif" color="#017bf5" size="4">
-                <br><a href="#HOME">HOME</a>
-                <br><a href="#PORTFOLIO">PORTFOLIO</a>
-                <br><a href="#RESOURCES">RESOURCES</a>
-                <br><a href="#BLOG">BLOG</a>
-                <br><a href="#CONTACT ME">CONTACT ME</a>
-            </font>        
-        </div>
-    </body>
 <body>
-<div class="wrapper" align="left" id="home article">
-    <h2>Clinton Fourie Tel: +27617002835 Mail: clinton.fourieza@outlook.com</h2>   
+        <div class="navbar">
+            <a href="#HOME">HOME</a>&nbsp
+            <a href="#PORTFOLIO">PORTFOLIO</a>&nbsp
+            <a href="#RESOURCES">RESOURCES</a>&nbsp
+            <a href="#BLOG">BLOG</a>&nbsp
+            <a href="#CONTACT ME">CONTACT ME</a>&nbsp
+        </div>        
+        <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
+        <font face="sans-serif" color="#017bf5" size="4"></font>
+</body>
+<body>
+<div class="wrapper" align="left" id="home article">  
             <h3>This is part of my DevOps project and this site is still under construction!</h3>
                 <p>My static website is pointing to my AWS s3 public bucket (DNS).
                 <br>I have setup 2x development VM's (1x Windows 10 32bit and 1x Ubuntu 20.04 64bit)
@@ -44,7 +43,6 @@
 <br />
         <h3>Network Topologies (Core infrastructure):</h3>
         <img src="/images/Topology2.png" alt="Clinton Fourie 03" class="Topology">
-
     </div>
 </body>
 <br />
@@ -91,7 +89,8 @@
         <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT ME</font></h2> 
             <form action="https://formspree.io/maypvlva" method="POST">
     </div>
-    <div div class="wrapper" align="center" name="ClintonContact">
+
+<div div class="wrapper" align="center" name="ClintonContact">
     <form>
         <table cellpadding="5" cellspacing="12" border="1" height="200">
             <tr>
@@ -114,9 +113,9 @@
             </tr>
         </table>
     </form>
-    </div>
+</div>
 <body>
     <div class="wrapper" align="center" id="home article">
-        <h2>Clinton Fourie Tel: +27617002835 Mail: clinton.fourieza@outlook.com</h2>
-    </div>
+        <h2>Clinton Fourie Tel: +27617002835 Mail: clinton.fourieza@outlook.com</h2>   
+</body>
 </html>
